refactor: :recycle: 重构dialog相关

--- a/styles/common/function.scss
+++ b/styles/common/function.scss
@@ -68,8 +68,8 @@
   @return $map;
 }
 
-@function is-important($important){
-  @return #{if($important, '!important', '')};
+@function is-important($important) {
+  @return #{if($important == true, "!important", "")};
 }
 
 //Fluent Design
