--- a/styles/protyle/_cover.scss
+++ b/styles/protyle/_cover.scss
@@ -12,7 +12,7 @@ $cover-buttons-shadow: rgb(15 15 15 / 10%) 0px 0px 0px 1px,
 $cover-buttons-height: 26px;
 // $cover-buttons-color: $rc-text-secondary;
 $cover-buttons-border-radius: $rc-bradius-small;
-$cover-buttons-divide: 1px solid $rc-border-3;
+$cover-buttons-divide: 1px solid $fn-border-3;
 
 $cover-tip-bg: rgba(0, 0, 0, 0.4);
 $cover-tip-border-radius: $rc-bradius-extra-small;
