--- a/styles/protyle/_protyle.scss
+++ b/styles/protyle/_protyle.scss
@@ -164,5 +164,5 @@ $pre-action-bg-focus: $rc-component-bg-select;
 
 //文本转语音按钮
 .protyle-speech {
-  border-color: $rc-border-2;
+  border-color: $fn-border-2;
 }
