--- a/styles/protyle/_toolbar.scss
+++ b/styles/protyle/_toolbar.scss
@@ -6,7 +6,7 @@ $toolbar-item-border-radius: $rc-bradius-medium;
 $toolbar-item-bg-hover: $rc-component-bg;
 $toolbar-item-bg-select: $rc-component-bg-select;
 $toolbar-item-bg-select-hover: $rc-component-button-select;
-$toolbar-divider-color: $rc-border-3;
+$toolbar-divider-color: $fn-border-3;
 
 .protyle-toolbar {
   padding-left: 3px;
