--- a/styles/protyle/block/_block-iframe.scss
+++ b/styles/protyle/block/_block-iframe.scss
@@ -10,7 +10,7 @@
 
         &,
         &::after {
-            background-color: $rc-border-1  ;
+            background-color: $fn-border-1  ;
             box-shadow: unset ;
 
 
