--- a/styles/protyle/block/_block-img.scss
+++ b/styles/protyle/block/_block-img.scss
@@ -27,7 +27,7 @@
             opacity: 0;
             box-shadow: unset ;
             transition: opacity 0.3s ease-out;
-            background-color: $rc-border-1  ;
+            background-color: $fn-border-1  ;
 
         }
 
