--- a/styles/protyle/block/_block-tag.scss
+++ b/styles/protyle/block/_block-tag.scss
@@ -3,7 +3,7 @@ $tag-border-radius: $rc-bradius-max;
 
 //标签
 $tag-color: $rc-text-secondary;
-$tag-border: 1px solid $rc-border-3;
+$tag-border: 1px solid $fn-border-3;
 $tag-shadow: rc-shadow(1);
 $tag-bg-hover: $rc-component-bg;
 
