--- a/styles/components/select.scss
+++ b/styles/components/select.scss
@@ -5,4 +5,8 @@
 .b3-select {
   @include component();
   background-color: map.get($bg, "component");
+  &:hover,
+  &:focus {
+    box-shadow: unset;
+  }
 }
