--- a/styles/components/slider.scss
+++ b/styles/components/slider.scss
@@ -9,7 +9,7 @@
   &::-webkit-slider-thumb {
     width: 18px;
     height: 18px;
-    box-shadow: 0 0 0 1px rgb(0 0 0 / 12%);
+    box-shadow: map.get($shadow, 0);
     border: 4px solid map.get($bg, "pop");
     border-radius: map.get($radius, "circle");
     background-color: map.get($bg, "brand");
