--- a/styles/panel/full-screen.scss
+++ b/styles/panel/full-screen.scss
@@ -1,21 +1,23 @@
-@use "../layout/top-bar" as *;
+@use "sass:map";
+@use "../common" as *;
+@use "../layout/top-bar";
+@use "../panel/block-icons";
 
 body.body--win32 {
   .fullscreen {
-
     // 编辑器全屏
     > .protyle-breadcrumb {
       .fn__space {
         -webkit-app-region: drag;
       }
 
-      padding: 3px $win-control-w * 3 3px 8px;
+      padding: 3px top-bar.$win-control-w * 3 3px 8px;
     }
 
     // 关系图全屏
-    >.block__icons {
-        padding: 3px $win-control-w * 3 3px 8px ;
-        height: 30px;
+    > .block__icons {
+      padding: 3px top-bar.$win-control-w * 3 3px 8px;
+      height: block-icons.$icon-w + 3px * 2;
     }
   }
 }
