--- a/styles/panel/outline.scss
+++ b/styles/panel/outline.scss
@@ -1,7 +1,7 @@
 // 大纲
 @use "sass:map";
 @use "../common" as *;
-@use "../components/list" as *;
+@use "../components/list";
 
 .sy__outline {
   // 标题
@@ -15,7 +15,7 @@
         color: map.get($text, "primary");
       }
       &__graphic {
-        @include emoji-icon($text-h, 12px, 12px);
+        @include emoji-icon(list.$text-h, 12px, map.get($icon, "medium"));
       }
     }
 
