--- a/styles/protyle/block/_block-table.scss
+++ b/styles/protyle/block/_block-table.scss
@@ -1,6 +1,6 @@
 $table-bg: $rc-container-bg;
 $table-border-radius: $rc-bradius-small;
-$table-border: $rc-border-3;
+$table-border: $fn-border-3;
 $td-bg: $rc-container-bg;
 
 //表格块
