--- a/styles/themes/tdesign/light.scss
+++ b/styles/themes/tdesign/light.scss
@@ -196,6 +196,8 @@
   --active-brand: var(--brand-active);
   --active-light: var(--brand-3);
 
+  //类边框阴影
+  --shadow-0:0 0 0 1px rgb(0 0 0 / 12%);
   // 基础/下层 投影 hover 使用的组件包括：表格 /
   --shadow-1: 0 1px 10px rgba(0, 0, 0, 5%), 0 4px 5px rgba(0, 0, 0, 8%),
     0 2px 4px -1px rgba(0, 0, 0, 12%);
