fix: :bug: 修复暗黑模式下的变量命名问题

--- a/theme/one-dark/dark.scss
+++ b/theme/one-dark/dark.scss
@@ -193,10 +193,10 @@
   --pop-3: var(--gray-5);
   --pop-4: var(--gray-6);
 
-  --brand-1: var(--brand-base);
-  --brand-2: var(--brand-hover);
-  --brand-3: var(--brand-active);
-  --brand-4: var(--brand-active);
+  --primary-1: var(--brand-base);
+  --primary-2: var(--brand-hover);
+  --primary-3: var(--brand-active);
+  --primary-4: var(--brand-active);
 
   --focus-1: 50, 56, 67;
   --focus-2: var(--brand-hover);
