--- a/theme/tdesign/dark.scss
+++ b/theme/tdesign/dark.scss
@@ -190,10 +190,10 @@
   --pop-3: var(--gray-5);
   --pop-4: var(--gray-6);
 
-  --brand-1: var(--brand-base);
-  --brand-2: var(--brand-hover);
-  --brand-3: var(--brand-active);
-  --brand-4: var(--brand-active);
+  --primary-1: var(--brand-base);
+  --primary-2: var(--brand-hover);
+  --primary-3: var(--brand-active);
+  --primary-4: var(--brand-active);
 
   --focus-1: var(--brand-base);
   --focus-2: var(--brand-hover);
