--- a/styles/component/list.scss
+++ b/styles/component/list.scss
@@ -191,7 +191,8 @@ $list-depth: 7;
     .b3-list-item__icon,
     .b3-list-item__action,
     .b3-list-item__graphic.popover__block {
-      @include item-focus();
+      @include color("focus");
+      @include item-tran("focus");
     }
   }
 
